# rive_experiments

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: FindGLAD.cmake  FindRIVE.cmake  FindSheenBidi.cmake
scripts/: build.bat  build.sh  build_web.sh  build_windows.bat  clean.bat  clean.sh  configure.bat  configure.sh  run.bat  run.sh
src/: graphics_backend.cpp  graphics_backend.hpp  graphics_backend.mm  main.cpp  metal_backend.hpp  metal_backend.mm  opengl_backend.cpp  opengl_backend.hpp
web/: shell.html
